create new Module: Download JSON

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':downloadimage', ':stringadvanced', ':guessstar'
+include ':app', ':downloadimage', ':stringadvanced', ':guessstar', ':downloadjson'
