create new Module: Weather App

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':downloadimage', ':stringadvanced', ':guessstar', ':downloadjson'
+include ':app', ':downloadimage', ':stringadvanced', ':guessstar', ':downloadjson', ':weatherapp'
